Build for production

--- a/favicons/manifest.json
+++ b/favicons/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Code to go",
-    "short_": "Code to go",
+    "short_name": "Code to go",
     "icons": [
         {
             "src": "/favicons/android-chrome-192x192.png",
